Bring the documentation up to the current API
Check every example against the source, document the background installation
of VLC and yt-dlp, the pinned yt-dlp release and the size of the first
download, and describe the coverage lint, the network tests, the mutation
testing and the end-to-end test.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>